# Nrf91x_LTE

./: .gitignore  CMakeLists.txt  README.md  prj.conf
components/lte/: lte.c  lte.h
src/: main.c
